; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_tree.c_hash_tree_cons.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_tree.c_hash_tree_cons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_proxy = type { i8*, i8*, i8* }

@list_hash_table = common dso_local global i32 0, align 4
@INSERT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hash_tree_cons(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca %struct.list_proxy, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  store i32 0, i32* %7, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @list_hash_pieces(i8* %10, i8* %11, i8* %12)
  store i32 %13, i32* %7, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = getelementptr inbounds %struct.list_proxy, %struct.list_proxy* %9, i32 0, i32 2
  store i8* %14, i8** %15, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds %struct.list_proxy, %struct.list_proxy* %9, i32 0, i32 1
  store i8* %16, i8** %17, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = getelementptr inbounds %struct.list_proxy, %struct.list_proxy* %9, i32 0, i32 0
  store i8* %18, i8** %19, align 8
  %20 = load i32, i32* @list_hash_table, align 4
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* @INSERT, align 4
  %23 = call i8** @htab_find_slot_with_hash(i32 %20, %struct.list_proxy* %9, i32 %21, i32 %22)
  store i8** %23, i8*** %8, align 8
  %24 = load i8**, i8*** %8, align 8
  %25 = load i8*, i8** %24, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %33, label %27

27:                                               ; preds = %3
  %28 = load i8*, i8** %4, align 8
  %29 = load i8*, i8** %5, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = call i8* @tree_cons(i8* %28, i8* %29, i8* %30)
  %32 = load i8**, i8*** %8, align 8
  store i8* %31, i8** %32, align 8
  br label %33

33:                                               ; preds = %27, %3
  %34 = load i8**, i8*** %8, align 8
  %35 = load i8*, i8** %34, align 8
  ret i8* %35
}

declare dso_local i32 @list_hash_pieces(i8*, i8*, i8*) #1

declare dso_local i8** @htab_find_slot_with_hash(i32, %struct.list_proxy*, i32, i32) #1

declare dso_local i8* @tree_cons(i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
